--- a/styles/index.css
+++ b/styles/index.css
@@ -1,10 +1,15 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Raleway&display=swap');
+html,body{
+        overflow-x: hidden;
+}
+
 .title-img{
     width: 30%;
     position: absolute;
     padding-right: 200px;
     text-align:left;
+    
 }
 #title{
     background-color: #402e4a;
