--- a/styles/index.css
+++ b/styles/index.css
@@ -1,14 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Raleway&display=swap');
-html,body{
-        overflow-x: hidden;
-}
 
 .title-img {
     width: 100%; /* Change width to 100% for full-width responsiveness */
     position: relative; /* Change position to relative */
     text-align: left; /* Align text to left */
     padding-right: 0; /* Remove padding-right */
+    overflow-x: hidden;
+
 }
 
 #title {
@@ -18,7 +17,7 @@ html,body{
 }
 
 .tagline {
-    font-size: 100px;
+    font-size: 100%;
     font-family: Montserrat;
 }
 
