--- a/styles/index.css
+++ b/styles/index.css
@@ -34,19 +34,25 @@ html,body{
         font-size: 50px; /* Adjust font size for smaller screens */
     }
 
-    .container-fluid {
-        padding: 5% 10%; /* Adjust padding for smaller screens */
-        height: 550px;
-    }
-}
 
+}
 .navbar{
     padding-bottom: 3.5rem;
     color: black;
     margin-bottom: 5%;
-    
+    font-family: 'Times New Roman', Times, serif;
 }
-.navbar-brand{
+@media only screen and (max-width: 600px) {
+    .navbar{
+        margin-bottom: 100px;
+
+    }
+
+
+
+
+}
+    .navbar-brand{
     font-family: 'Ubuntu', sans-serif;
     font-size: 2.5rem;
     
